<resources>
    <string name="app_name">My-Data-App</string>

    <string name="splash_app_title">청년정책 골랐zip</string>
    <string name="splash_app_description">내가 지원할 수 있는 청년 정책,\n쉽고 빠르게 찾아줄게요!</string>
    <string name="splash_app_today_service_info">당신을 위한 %d개의 정책 정보!</string>
    <string name="splash_app_team_info">2020 마이데이터 비즈니스 아이디어, 개발 공모전 출품작</string>
    <string name="input_user_personal_input_title">앱을 시작하기 위해 필요해요</string>
    <string name="input_user_optional_input_title">더 정책을 잘 찾기 위해 필요해요</string>
    <string name="mandate_input">(필수 입력 사항)</string>
    <string name="optional_input">(선택 입력 사항)</string>
    <string name="input_user_birth">생년월일</string>
    <string name="input_user_gender">성별</string>
    <string name="input_user_educated_state">최종 학력</string>
    <string name="input_user_has_job">취업여부</string>
    <string name="input_user_optional_description">맞춤형 정책 분석 및 지원자격 판단, 선정 여부 예측을 위해 각 기관으로부터 정보 제공 동의가 필요합니다. 아래의 필요 정보 목록을 확인하시고 동의 여부를 체크해주세요.</string>
    <string name="input_user_complete_button">맞춤 정책 찾으러 가기!</string>
    <string name="input_user_double_check">입력해주셔서 감사합니다!\n빠진 정보가 없는지 다시 한번 확인해주세요!</string>
    <string name="input_user_employment_insurence">고용보험 관련 정보</string>
    <string name="input_user_income">소득분위 관련 정보</string>
    <string name="input_user_health_insurance">건강보험 관련 정보</string>
    <string name="input_user_confirm">동의</string>
    <string name="input_user_deny">비동의</string>
    <string name="policy_list_search_hint">검색어를 입력하세요</string>
    <string name="item_my_data_switch_on">횟수 표시</string>
    <string name="item_my_data_switch_off">횟수 미표시</string>
    <string name="my_data_footer_string">각 정책별 상세 정보는 제공 기관별 홈페이지, 워크넷 등을 참조하세요</string>
    <string name="support_file_type_dialog_title">다운로드 형식 선택</string>
    <string name="item_my_data_listitem_download">내 지원정보 다운로드</string>
    <string name="my_data_title">내 정책 정보</string>
    <string name="my_data_header_download">다운로드</string>
    <string name="my_data_list_title_title">내가 열람/신청한 정보 목록</string>
    <string name="set_alarm">알림 설정</string>
    <string name="register_policy">지원하기</string>
    <string name="item_policy_detail_category_title">정책 유형</string>
    <string name="item_policy_detail_supports_title">지원 내용</string>
    <string name="item_policy_detail_volume_title">지원 규모</string>
    <string name="item_policy_detail_due_title">신청 기간</string>
    <string name="view_policy_detail_matching_rate">정책 매칭률</string>
    <string name="policy_detail_user_score_title">정책 평점</string>
    <string name="ssn_agreement_desc_test">개인은 회원 가입 없이 공인인증서 본인 인증만으로 각종 조회, 납부 및 발급서비스를 간편하게 이용하실 수 있으며, 한번의 로그인으로 국민건강보험공단의 패밀리 사이트를 별도 로그인 없이 사용 가능합니다. 사업장의 조회, 납부 및 발급서비스는 \'사업장 로그인\'을 이용하시기 바랍니다.</string>
    <string name="ssn_agreement_ssn_title">주민등록번호</string>
    <string name="agreement_ssn_broswer_cert">브라우저 인증서 로그인</string>
    <string name="agreement_ssn_public_cert">공인 인증서 로그인</string>
    <string name="agreement_ssn_info">별도 회원가입 없이 본인인증 후 이용하실 수 있습니다.</string>
    <string name="agreement_public_cert_title">인증서 입력(전자서명)</string>
    <string name="agreement_certification_harddisk">하드디스크</string>
    <string name="agreement_certification_usb">이동식 디스크</string>
    <string name="agreement_certification_phone">스마트폰</string>
    <string name="agreement_certification_password_title">인증서 암호</string>
    <string name="confirm">확인</string>
</resources>