<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.splash.SplashActivity">

    <data>
        <variable
            name="viewModel"
            type="com.skfo763.my_data_app.ui.splash.SplashViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash_parent_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fadeVisibility="@{viewModel.splashVisibility}"
        tools:background="@drawable/gradient_splash">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/splash_file_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/splash_app_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_splash_file_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/splash_app_title"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:fontFamily="@font/gmarket_sans_bold"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_file_icon" />

        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toTopOf="@+id/splash_app_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_app_title"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_app_description"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/splash_today_service_left"
            android:layout_width="8dp"
            android:layout_height="2dp"
            android:background="#ffffff"
            app:layout_constraintTop_toTopOf="@id/splash_today_service_info"
            app:layout_constraintBottom_toBottomOf="@id/splash_today_service_info"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/splash_today_service_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="481dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_today_service_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@{viewModel.serviceCountText}"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
            app:layout_constraintEnd_toStartOf="@+id/splash_today_service_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/splash_today_service_left"
            tools:text="@string/splash_app_today_service_info"/>

        <View
            android:id="@+id/splash_today_service_right"
            android:layout_width="8dp"
            android:layout_height="2dp"
            android:background="#ffffff"
            app:layout_constraintTop_toTopOf="@id/splash_today_service_info"
            app:layout_constraintBottom_toBottomOf="@id/splash_today_service_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/splash_today_service_info" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/splash_app_team_info"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>