<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.skfo763.my_data_app.ui.agreement.AgreementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6EAFF">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ssn_agreement_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toTopOf="@+id/ssn_agreement_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_baseline_security_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ssn_agreement_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="#323232"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ssn_agreement_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssn_agreement_icon"
            android:text="사회보험 통합징수포털" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ssn_agreement_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/ssn_agreement_ssn_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssn_agreement_title"
            android:text="@string/ssn_agreement_desc_test" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ssn_agreement_ssn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/ssn_agreement_ssn_title"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toTopOf="@+id/ssn_agreement_login_browser_cert"
            app:layout_constraintEnd_toStartOf="@+id/ssn_agreement_ssn_first"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssn_agreement_desc" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ssn_agreement_ssn_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/rect_ffffff_6dp_1dp"
            android:gravity="center_vertical"
            android:hint="주민번호 앞자리"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="12dp"
            android:paddingBottom="8dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/ssn_agreement_ssn_title"
            app:layout_constraintEnd_toStartOf="@+id/ssn_agreement_ssn_second"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ssn_agreement_ssn_title"
            app:layout_constraintTop_toTopOf="@+id/ssn_agreement_ssn_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ssn_agreement_ssn_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rect_ffffff_6dp_1dp"
            android:gravity="center_vertical"
            android:hint="주민번호 뒷자리"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingRight="12dp"
            android:paddingBottom="8dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/ssn_agreement_ssn_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ssn_agreement_ssn_first"
            app:layout_constraintTop_toTopOf="@+id/ssn_agreement_ssn_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ssn_agreement_login_browser_cert"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/rect_ca3c31_4dp_0dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/agreement_ssn_broswer_cert"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:onClick="@{(v) -> viewModel.onBrowserCertLoginClicked(v)}"
            app:layout_constraintTop_toBottomOf="@id/ssn_agreement_ssn_title"
            app:layout_constraintEnd_toStartOf="@+id/ssn_agreement_logon_public_cert"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ssn_agreement_logon_public_cert"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/rect_ca3c31_4dp_0dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/agreement_ssn_public_cert"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:onClick="@{(v) -> viewModel.onPublicCertLoginClicked(v)}"
            app:layout_constraintBottom_toBottomOf="@+id/ssn_agreement_login_browser_cert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ssn_agreement_login_browser_cert"
            app:layout_constraintTop_toTopOf="@+id/ssn_agreement_login_browser_cert" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ssn_agreement_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_splash_help_outline"
            android:drawablePadding="4dp"
            android:drawableTint="#8D8D8E"
            android:gravity="center_vertical"
            android:text="@string/agreement_ssn_info"
            android:textSize="13sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>